<resources>
    <string name="app_name">Mimamori</string>

    <string name="mamorare">マモラレ</string>
    <string name="mimamori">ミマモリ</string>
    <string name="entry">登録</string>
    <string name="update">更新</string>
    <string name="send">送信</string>

    <!-- Onboarding -->
    <string name="onboarding1_msg">「ミマモリ」はミマモリ側とマモラレ側それぞれがこのアプリをインストールすることで利用できます。\nマモラレ側が通知ボタンを押すとミマモリ設定したユーザーに通知が送られ、知らせることができます。</string>
    <string name="onboarding2_msg">このアプリをどちらで使用しますか？\n(設定よりいつでも切り替えて利用することも可能です。)</string>
    <string name="onboarding2_mamorare_msg">マモラレは「通知を送信する側」です。\n登録しているミマモリユーザーにボタンを押すたびに通知が飛ばすことができます。</string>
    <string name="onboarding2_mimamori_msg">ミマモリは「通知を受信する側」です。\nマモラレ側にアクションがあった際に通知が届き、確認することができます。</string>
    <string name="onboarding3_mamorare_msg"> 【登録方法】\nミマモリ側を選択している人からミマモリIDを教えてもらって登録してください。\n(ミマモリIDの登録も後から行うことが可能です。)</string>
    <string name="onboarding3_mamorare_input_placeholder">ミマモリID</string>
    <string name="onboarding3_mamorare_input_desc">↑ ここに「ミマモリID」を入力して、\n「はじめる」をタップしてください。</string>
    <string name="onboarding3_mimamori_msg">【登録方法】\n表示されているミマモリIDをマモラレ側に共有して、登録してもらってください。</string>
    <string name="onboarding3_mimamori_copy">コピー</string>
    <string name="onboarding3_mimamori_share">共有</string>
    <string name="onboarding3_mimamori_share_text">ミマモリアプリを一緒に利用してね♫\n----------------------------------------\nミマモリID：%1$s\n----------------------------------------\n・このIDをマモラレ側の設定より入力すればマモラレ側が通知ボタンを押すと通知が届くようになります。</string>
    <string name="onboarding_next">次へ</string>
    <string name="onboarding_start">はじめる</string>

    <!-- MainRootView(マモラレ/ミマモリ画面) -->
    <string name="main_root_notify_history">通知履歴</string>
    <string name="main_root_mimamori_name">ミマモリ対象：%1$s</string>
    <string name="main_root_offline_msg">ネットワークに接続されていないため、機能を利用できません。\nネットワークに接続してから再度アプリを起動してください。</string>

    <!-- Dialog -->
    <string name="dialog_title_notice">お知らせ</string>
    <string name="dialog_base_positive_text">OK</string>
    <string name="dialog_base_negative_text">キャンセル</string>

    <!-- Dialog > Auth -->
    <string name="dialog_auth_validation_input">入力された内容に不備があります。正しい情報を入力してください。</string>
    <string name="dialog_auth_success_send_email">再設定用のメールを送信しました。</string>
    <string name="dialog_auth_failed_send_email">予期せぬエラーが発生し、メールの送信に失敗しました。\n時間を空けてから再度お試しください。</string>
    <string name="dialog_auth_success_update_user_info">ユーザー情報を変更しました。</string>
    <string name="dialog_auth_failed_update_user_info">ユーザー情報の更新に失敗しました。\n時間を空けてから再度お試しください。</string>
    <string name="dialog_auth_failed_unknown">予期せぬエラーが発生しました。\nしばらく時間を置いてから再度お試しください。</string>

    <!-- Dialog > Setting -->
    <string name="dialog_sign_out">ログアウトしますか？</string>
    <string name="dialog_confirm_withdrawal">本当に退会しますか？</string>
    <string name="dialog_sign_out_positive_text">ログアウト</string>
    <string name="dialog_not_exist_mimamoriid">存在しないミマモリIDです</string>
    <string name="dialog_success_notify_msg">通知メッセージを変更しました。</string>
    <string name="dialog_failed_notify_msg">通知メッセージは空では登録できません。</string>
    <string name="dialog_success_mode">「%1$sモード」に変更しました</string>>
    <string name="dialog_success_entry_mimamori">ミマモリを登録しました。</string>
    <string name="dialog_confirm_delete_mamorare">「%1$s」さんをミマモリ対象から外しますか？</string>
    <string name="dialog_success_copy">コピーしました。</string>
    <string name="dialog_edit_user_name_validation_input">ユーザー名を入力してください。</string>

    <!-- Dialog > Notify -->
    <string name="dialog_success_send_notify">通知を送信しました。</string>
    <string name="dialog_failed_send_notify">通知の送信に失敗しました。\nしばらく時間を置いてから再度お試しください。</string>


    <!-- Setting -->
    <string name="setting_app_title">アプリ設定</string>
    <string name="setting_app_current_mode_mimamori">現在：ミマモリ</string>
    <string name="setting_app_current_mode_mamorare">現在：マモラレ</string>
    <string name="setting_app_mimamori_list">ミマモリリスト</string>
    <string name="setting_app_mamorare_list">マモラレリスト</string>
    <string name="setting_app_mimamori_id">ミマモリID</string>
    <string name="setting_app_mimamori_entry">ミマモリ登録</string>
    <string name="setting_app_notify_msg">通知メッセージ変更</string>
    <string name="setting_app_how_to_use">アプリの使い方</string>

    <string name="setting_auth_title">アカウント</string>
    <string name="setting_auth_edit_info">アカウント情報変更</string>
    <string name="setting_auth_sign_out">ログアウトする</string>
    <string name="setting_auth_withdrawal">退会する</string>

    <string name="setting_link_title">LINK</string>
    <string name="setting_link_inquiry">アプリの不具合はこちら</string>
    <string name="setting_link_terms_of_service">利用規約とプライバシーポリシー</string>
    <string name="setting_link_desc">・アプリに不具合がございましたら「アプリの不具合はこちら」よりお問い合わせください。</string>

    <!-- Setting　→　ミマモリモード/マモラレモード切り替え画面 -->
    <string name="setting_select_app_mode_desc">アプリのモードを切り替えます。\nミマモリモードからマモラレモードにしても通知は届きます。</string>

    <!-- Setting　→　ミマモリ登録画面 -->
    <string name="setting_entry_mimamori"> ↑ ここに「ミマモリID」を入力して、\n「登録」をタップしてください。</string>

    <!-- Setting　→　通知メッセージ変更画面 -->
    <string name="setting_notify_text_change_desc">ミマモリ側に届く通知メッセージを自由に変更することができます。\n3つまでメッセージを保管することができますが、実際にメッセージに利用されるのはチェックマークの入っているメッセージのみです。</string>

    <!-- Setting　→　ミマモリ/マモラレリスト画面 -->
    <string name="setting_user_list_desc_mamorare">登録されているミマモリ対象リストです。\nこの画面から対象を解除することはできません。通知を届ける人を変更したい場合はミマモリ側の人にマモラレ対象リストから削除してもらってください。</string>
    <string name="setting_user_list_desc_mimamori">ミマモリ対象を変更するとトップ画面に表示されるマモラレ情報が切り替わります。\n切り替えても通知はマモラレ対象全員分届きますので安心してください。</string>
    <string name="setting_no_user_mamorare">マモラレ登録しているユーザーがいません。</string>
    <string name="setting_no_user_mimamori">ミマモリ登録しているユーザーがいません。</string>

    <!-- Setting　→　アカウント情報変更 -->
    <string name="setting_edit_user_info_desc">ユーザー名を変更することができます。</string>
    <string name="setting_edit_user_info_input_hint">ユーザー名</string>

    <!-- Setting　→　退会画面 -->
    <string name="setting_withdrawal_button">退会する</string>
    <string name="setting_withdrawal_desc">アカウントを削除すると対象のデータはすべて削除されます。\n連携していたユーザーも解除されますのでご注意ください。</string>
    <string name="setting_withdrawal_email_input_desc">ログインパスワードを入力してください。</string>
    <string name="setting_withdrawal_reauth">アカウントを削除するには再認証してください。</string>

    <!-- FBAuthentication -->
    <string name="auth_input_title">アカウント情報</string>
    <string name="auth_input_hint_name">ユーザー名</string>
    <string name="auth_input_hint_email">メールアドレス</string>
    <string name="auth_input_hint_pass">パスワード</string>
    <string name="auth_new_entry">新規登録</string>
    <string name="auth_sign_in">ログイン</string>
    <string name="auth_already_registered">登録済みの方はこちら</string>
    <string name="auth_forget_password">パスワードをお忘れですか？</string>
    <string name="auth_forget_password_desc">パスワードを忘れてしまった場合は登録しているメールアドレスを入力してください。\n入力されたメールアドレスに再設定用のメールが届きますので記載されているURLから再設定を行ってください。</string>

    <!-- HowToUse -->
    <string name="how_to_use_title">Question</string>
    <string name="how_to_use_q1">アプリの使い方を教えて</string>
    <string name="how_to_use_a1">アプリを活用するためには以下の4STEPを実行してください。\n※またそのためにはミマモリ側とマモラレ側の2人ともがアカウントを作成する必要があります。\n\n・STEP1：ミマモリ側がアプリをインストールしてアカウント作成\n\n・STEP2：マモラレ側もアプリをインストールしてアカウント作成\n\n・STEP3：ミマモリ側の設定から確認できる「ミマモリID」をマモラレ側に登録\n\n・STEP4：完了\n\n\nこれでマモラレ側がボタンをクリックしたタイミングでミマモリ側に通知を送ることができるようになります。</string>
    <string name="how_to_use_q2">通知履歴に表示される通知の数はいくつですか？</string>
    <string name="how_to_use_a2">通知履歴に表示される通知は1週間分のみになります。\n1週間前の通知データは削除されていきますのでご注意ください。</string>
    <string name="how_to_use_q3">通知が届かなくなった</string>
    <string name="how_to_use_a3">通知が届かなくなった場合は携帯を変えてアカウントに入り直した時などが考えられます。\nその際はミマモリ対象のマモラレユーザーを一度削除して、再度登録してもらってください。それでも届かない場合は通知設定がOFFになっていないことを確認してみてください。\nご不明点は「アプリの不具合はこちら」よりお問い合わせください。</string>
    <string name="how_to_use_q4">⚪︎⚪︎な機能を追加してほしい</string>
    <string name="how_to_use_a4">アプリのレビューもしくは「アプリの不具合はこちら」のWebサイトのお問い合わせフォームからフィードバックをいただけるとできる限り対処いたします。\nしかしご要望に添えない可能性があることをご了承ください。</string>

    <!-- 通知  -->
    <string name="notify_title">「%1$s」さんから通知が届きました。</string>
    <string name="notify_button_msg">ボタンを押して通知を送信しました。</string>


    <!-- Dev  -->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <!-- Prd -->
<!--    <string name="admob_app_id"></string>-->

    <!-- Dev -->
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <!-- Prd -->
<!--    <string name="admob_banner_id"></string>-->
</resources>