<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ex_foundation"
    android:clickable="true"
    tools:context=".View.FBAuthentication.AuthRootFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ex_text"
            android:text="@string/auth_input_title" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/thema_input_shape"
            android:ems="10"
            android:hint="@string/auth_input_hint_name"
            android:inputType="text"
            android:paddingHorizontal="8dp"
            android:textSize="14sp"
            android:textColor="@color/ex_text"
            app:backgroundTint="@null" />

        <Space
            android:id="@+id/input_name_hidden_space"
            android:layout_width="match_parent"
            android:layout_marginVertical="4dp"
            android:layout_height="50dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/thema_input_shape"
            android:ems="10"
            android:hint="@string/auth_input_hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="8dp"
            android:textSize="14sp"
            android:textColor="@color/ex_text"
            app:backgroundTint="@null" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/thema_input_shape"
            android:ems="10"
            android:hint="@string/auth_input_hint_pass"
            android:inputType="textPassword"
            android:paddingHorizontal="8dp"
            android:textSize="14sp"
            android:textColor="@color/ex_text"
            app:backgroundTint="@null" />


        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:foregroundTint="@color/white"
            android:background="@drawable/thema_button_shape"
            app:backgroundTint="@null"
            android:text="@string/auth_new_entry"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/forget_password_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:text="@string/auth_forget_password"
            android:textColor="@color/ex_accent"
            android:textSize="12sp"
            android:visibility="gone" />

        <Space
            android:id="@+id/forget_password_button_hidden_space"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="visible" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="20dp">


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/ex_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:text="OR"
            android:textColor="@color/ex_text"
            android:textAlignment="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/ex_text" />
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>


    <Button
        android:id="@+id/switch_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:text="@string/auth_already_registered"
        android:textColor="@color/ex_accent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>