<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ex_foundation"
    android:clickable="true"
    tools:context=".View.Onboarding.Onboarding3Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/mamorare_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/thema_msg_shape"
                android:padding="10dp"
                android:text="@string/onboarding3_mamorare_msg"
                android:textColor="@color/ex_text"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/input_mimamori_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/thema_input_shape"
                android:ems="10"
                android:hint="@string/onboarding3_mamorare_input_placeholder"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="8dp"
                android:textColor="@color/ex_text"
                android:textSize="14sp"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/onboarding3_mamorare_input_desc"
                android:textColor="@color/ex_text"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mimamori_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding3_mimamori_msg"
                android:padding="10dp"
                android:background="@drawable/thema_msg_shape"
                android:textColor="@color/ex_text"
                android:textStyle="bold"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"/>


            <TextView
                android:id="@+id/miamori_id_label"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="取得できませんでした"
                android:padding="10dp"
                android:background="@drawable/thema_msg_shape"
                android:gravity="center_vertical"
                android:textSize="16dp"
                android:textColor="@color/ex_text"
                android:textStyle="bold"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/copy_button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/thema_button_shape"
                    android:foregroundTint="@color/white"
                    android:text="@string/onboarding3_mimamori_copy"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>


                <Button
                    android:id="@+id/share_button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/thema_button_shape"
                    android:foregroundTint="@color/white"
                    android:text="@string/onboarding3_mimamori_share"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

            </LinearLayout>


        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/start_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/thema_button_shape"
            android:foregroundTint="@color/white"
            android:text="@string/onboarding_start"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ex_circle_outline_shap" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ex_circle_outline_shap" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ex_circle_shap" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>