<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ex_foundation"
    android:clickable="true"
    tools:context=".View.Setting.SelectAppMainModeFragment">

    <include
        android:id="@+id/include_header"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_header">


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_select_app_mode_desc"
            android:padding="10dp"
            android:background="@drawable/thema_msg_shape"
            android:textColor="@color/ex_text"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/select_mamorare_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/thema_button_shape">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/icon_circle"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/select_mamorare_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/clear"
                android:text="@string/mamorare"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@null" />


        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/select_mimamori_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/thema_button_shape"
            android:backgroundTint="@color/ex_gray">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/icon_circle"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/select_mimamori_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/clear"
                android:text="@string/mimamori"
                android:textColor="@color/ex_text"
                android:textStyle="bold"
                app:backgroundTint="@null" />


        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/select_mode_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_mamorare_msg"
            android:padding="10dp"
            android:background="@drawable/thema_msg_shape"
            android:textColor="@color/ex_text"
            android:textStyle="bold"/>



        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <Button
            android:id="@+id/update_mode_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/thema_button_shape"
            android:foregroundTint="@color/white"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>