<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ex_foundation"
    android:clickable="true"
    tools:context=".View.Onboarding.Onboarding2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_msg"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/thema_msg_shape"
            android:textColor="@color/ex_text"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/select_mamorare_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/thema_button_shape">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/icon_circle"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/select_mamorare_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/clear"
                android:text="@string/mamorare"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@null" />


        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/select_mimamori_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/thema_button_shape"
            android:backgroundTint="@color/ex_gray">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/icon_circle"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/select_mimamori_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/clear"
                android:text="@string/mimamori"
                android:textColor="@color/ex_text"
                android:textStyle="bold"
                app:backgroundTint="@null" />


        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/select_mode_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding2_mamorare_msg"
            android:padding="10dp"
            android:background="@drawable/thema_msg_shape"
            android:textColor="@color/ex_text"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/next_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/thema_button_shape"
            android:foregroundTint="@color/white"
            android:text="@string/onboarding_next"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ex_circle_outline_shap" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ex_circle_shap" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ex_circle_outline_shap" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>